View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026508 | Open CASCADE | OCCT:Data Exchange | public | 2015-07-31 12:29 | 2016-06-23 16:49 |
Reporter | stv | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026508: Add the possibility to get label from XCAFPrs_AISObject | ||||
Description | It's useful to have possibility to get the label from XCAFPrs_AISObject. This allow to quick and precise determinate the label (and also shape) in XCAF document which associated with given presentation. | ||||
Steps To Reproduce | Inline method XCAFPrs_AISObject::GetLabel() was added. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26508 has been created by stv. SHA-1: deabb146bc988923eca4d8e70387f95f65f3107c Detailed log of new commits: Author: stv Date: Fri Jul 31 12:59:48 2015 +0300 0026508: Add the possibility to get label from XCAFPrs_AISObject. |
|
Branch CR26508 is ready to be tested |
|
Branch CR26508 has been updated forcibly by mkv. SHA-1: 374d606cb52f0d2f4151184c5ca29e85f39fa9a0 |
|
Dear BugMaster, Branch CR26508 was rebased on current master of occt git-repository. SHA-1: 374d606cb52f0d2f4151184c5ca29e85f39fa9a0 |
|
Dear BugMaster, Branch CR26508 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 374d606cb52f0d2f4151184c5ca29e85f39fa9a0 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 90692838 / 91018892 [-0.36%] Total CPU difference: 18032.019999999102 / 17854.03999999889 [+1.00%] products component : Total MEMORY difference: 24895894 / 24839770 [+0.23%] Total CPU difference: 7038.690000000006 / 7006.500000000006 [+0.46%] Testing on Windows: occt component : Total MEMORY difference: 56905149 / 56928396 [-0.04%] Total CPU difference: 16576.71306029887 / 16688.25377529903 [-0.67%] products component : Total MEMORY difference: 16006613 / 16013849 [-0.05%] Total CPU difference: 5150.0454128999545 / 5275.751018699962 [-2.38%] There are no differences in images found by testdiff. |
|
Branch CR26508 has been deleted by inv. SHA-1: 374d606cb52f0d2f4151184c5ca29e85f39fa9a0 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-31 12:29 | stv | New Issue | |
2015-07-31 12:29 | stv | Assigned To | => gka |
2015-07-31 12:29 | stv | Assigned To | gka => stv |
2015-07-31 14:01 | git | Note Added: 0043747 | |
2015-07-31 14:03 | stv | Assigned To | stv => gka |
2015-07-31 14:03 | stv | Status | new => resolved |
2015-07-31 14:03 | stv | Steps to Reproduce Updated | |
2015-08-10 12:37 |
|
Note Added: 0043935 | |
2015-08-10 12:37 |
|
Assigned To | gka => bugmaster |
2015-08-10 12:37 |
|
Status | resolved => reviewed |
2015-08-10 12:37 |
|
Note Edited: 0043935 | |
2015-08-10 14:24 |
|
Assigned To | bugmaster => mkv |
2015-08-10 14:51 | git | Note Added: 0043939 | |
2015-08-11 17:51 |
|
Note Added: 0043991 | |
2015-08-11 17:51 |
|
Note Added: 0043992 | |
2015-08-11 17:51 |
|
Assigned To | mkv => bugmaster |
2015-08-11 17:51 |
|
Status | reviewed => tested |
2015-08-11 17:51 |
|
Test case number | => Not needed |
2015-08-14 10:26 |
|
Changeset attached | => occt master 773d3a5a |
2015-08-14 10:26 |
|
Assigned To | bugmaster => ski |
2015-08-14 10:26 |
|
Status | tested => verified |
2015-08-14 10:26 |
|
Resolution | open => fixed |
2015-08-14 10:51 | git | Note Added: 0044116 | |
2016-04-20 15:44 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:48 |
|
Status | verified => closed |
2016-06-23 16:49 | kgv | Relationship added | related to 0027632 |