0026508: Add the possibility to get label from XCAFPrs_AISObject.